# Delirium

./: .gitignore  CMakeLists.txt  README.md  Specification.md  compile_commands.json  grammar.ebnf
.cache/clangd/index/: chunk.cpp.0353E3BF55D14D9A.idx  chunk.h.2D6FABE4B7DC2757.idx  common.h.C308A440D4479A46.idx  debug.h.A33EBB49B2E8FE7C.idx  main.cpp.24F5108A1D559893.idx  memory.cpp.31DBCB63AC6C5C67.idx  memory.h.AFF1CD0301B88DD3.idx  value.h.972B510744CFF2B6.idx  vm.h.2D0449AA959D3A05.idx
examples/: boolean.del  demo.del  expression.del  fibonacci.del  forstatement.del  functiondeclarations.del  ifstatement.del  julia.del  logicaloperators.del  mutation.del  printline.del  printstatements.del  reassignment.del  statements.del  string.del  whilestatement.del
include/: bytecode.hpp  chunk.h  common.h  compiler.h  debug.h  delirium.hpp  disassembler.hpp  lexer.h  memory.h  mutationConstants.h  mutator.h  object.h  opcode.hpp  table.h  type.hpp  value.h  vm.h
scripts/: build.sh  fibonacci.py  run_tests.sh  timer.py
src/: bytecode.cpp  chunk.cpp  compiler.cpp  debug.cpp  delirium.cpp  disassembler.cpp  lexer.cpp  main.cpp  memory.cpp  mutator.cpp  object.cpp  table.cpp  type.cpp  value.cpp  vm.cpp
tests/: CMakeLists.txt  test_lexer.cpp
